--- a/join-us.html
+++ b/join-us.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>IDEAL | Join Us</title>
+  <title>IDEA LAB | Join Us</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -44,7 +44,7 @@
       line-height: 1.1;
     }
 
-    .navbar-brand .brand-acronym {
+    .navbar-brand .brand-acronym, .navbar-brand .brand-lab {
       font-size: 2em;
       font-weight: 700;
       color: #0E4A84 !important;
@@ -204,7 +204,7 @@
         background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
       }
 
-      .navbar-brand .brand-acronym {
+      .navbar-brand .brand-acronym, .navbar-brand .brand-lab {
         font-size: 1.5em !important;
       }
 
@@ -251,8 +251,8 @@
       <div class="row justify-content-center mb-4">
         <div class="col-md-9 heading-section text-center ftco-animate">
           <span class="subheading">Join Us</span>
-          <h2 class="mb-4">IDEAL 초기 멤버 모집</h2>
-          <p>AI 기술로 공학 설계의 패러다임을 바꿀 젊고 역동적인 연구실 IDEAL이 첫 발을 내디뎠습니다.<br>지능형 설계의 새로운 기준을 세우며, 연구실의 문화를 함께 정립해 나갈 주도적이고 열의 넘치는 동료를 찾습니다.</p>
+          <h2 class="mb-4">IDEA LAB 초기 멤버 모집</h2>
+          <p>AI 기술로 공학 설계의 패러다임을 바꿀 젊고 역동적인 연구실 IDEA LAB이 첫 발을 내디뎠습니다.<br>지능형 설계의 새로운 기준을 세우며, 연구실의 문화를 함께 정립해 나갈 주도적이고 열의 넘치는 동료를 찾습니다.</p>
         </div>
       </div>
       <div class="row justify-content-center">
@@ -269,7 +269,7 @@
 
             <div class="faq-item">
               <div class="faq-question">어떤 연구실 문화를 지향하나요?</div>
-              <p><strong>IDEAL은 이제 막 기반을 다지기 시작한 한양대 지능형 설계 연구실</strong>로, 젊은 지도교수의 추진력을 바탕으로 열린 의사소통과 빠른 실행을 최우선에 둡니다. 혼자 연구하기보다 서로의 시행착오와 아이디어를 즉시 공유하며 <strong>초기 멤버가 연구실의 역사와 전통을 직접 설계</strong>합니다. 지도교수가 제공하는 체계적인 코칭과 연구 로드맵으로 방황 없이 성장할 수 있는 환경을 제공합니다.</p>
+              <p><strong>IDEA LAB은 이제 막 기반을 다지기 시작한 한양대 지능형 설계 연구실</strong>로, 젊은 지도교수의 추진력을 바탕으로 열린 의사소통과 빠른 실행을 최우선에 둡니다. 혼자 연구하기보다 서로의 시행착오와 아이디어를 즉시 공유하며 <strong>초기 멤버가 연구실의 역사와 전통을 직접 설계</strong>합니다. 지도교수가 제공하는 체계적인 코칭과 연구 로드맵으로 방황 없이 성장할 수 있는 환경을 제공합니다.</p>
             </div>
 
             <div class="faq-item">
@@ -322,7 +322,7 @@
               <img src="images/01 캐릭터 마크 - 기본형-04.png" alt="Hanyang University ERICA logo" style="max-height: 240px;">
             </div>
             <p style="text-align: center; margin: 0;">
-              <span class="footer-line-1">&copy; IDEAL, Hanyang University ERICA.</span>
+              <span class="footer-line-1">&copy; IDEA LAB, Hanyang University ERICA.</span>
               <span class="footer-line-2">All rights reserved.</span><br>
               <span class="template-credit">This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
             </p>
