--- a/news.html
+++ b/news.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>IDEAL | News</title>
+  <title>IDEA LAB | News</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -41,7 +41,7 @@
       line-height: 1.1;
     }
 
-    .navbar-brand .brand-acronym {
+    .navbar-brand .brand-acronym, .navbar-brand .brand-lab {
       font-size: 2em;
       font-weight: 700;
       color: #0E4A84 !important;
@@ -167,7 +167,7 @@
       }
 
       /* 모바일에서 navbar 브랜드 크기 조정 */
-      .navbar-brand .brand-acronym {
+      .navbar-brand .brand-acronym, .navbar-brand .brand-lab {
         font-size: 1.5em !important;
       }
 
@@ -235,15 +235,15 @@
           <img src="images/image_3.jpg" alt="Award ceremony">
           <div>
             <span class="date">Nov. 12, 2025</span>
-            <h4>Received the HYU IDEAL Lab Impact Award</h4>
-            <p>Honored to be recognized for leading our data-driven design initiatives and mentoring the next wave of IDEAL researchers.</p>
+          <h4>Received the HYU IDEA LAB Impact Award</h4>
+            <p>Honored to be recognized for leading our data-driven design initiatives and mentoring the next wave of IDEA LAB researchers.</p>
           </div>
         </div>
         <div class="news-item ftco-animate">
-          <img src="images/about-1.jpg" alt="IDEAL sprint">
+          <img src="images/about-1.jpg" alt="IDEA LAB sprint">
           <div>
             <span class="date">Oct. 10, 2025</span>
-            <h4>IDEAL kicks off the co-design studio sprint</h4>
+            <h4>IDEA LAB kicks off the co-design studio sprint</h4>
             <p>Launched a two-week sprint where mixed teams pair LLM copilots with rapid CFD studies to prototype rotor ideas.</p>
           </div>
         </div>
@@ -259,7 +259,7 @@
           <img src="images/image_2.png" alt="Seminar">
           <div>
             <span class="date">Sep. 5, 2025</span>
-            <h4>First IDEAL seminar on physics-guided AI</h4>
+            <h4>First IDEA LAB seminar on physics-guided AI</h4>
             <p>Shared our surrogate modeling pipeline with campus visitors and received energizing feedback on deployment tooling.</p>
           </div>
         </div>
@@ -292,7 +292,7 @@
               <img src="images/01 캐릭터 마크 - 기본형-04.png" alt="Hanyang University ERICA logo" style="max-height: 240px;">
             </div>
             <p style="text-align: center; margin: 0;">
-              <span class="footer-line-1">&copy; IDEAL, Hanyang University ERICA.</span>
+          <span class="footer-line-1">&copy; IDEA LAB, Hanyang University ERICA.</span>
               <span class="footer-line-2">All rights reserved.</span><br>
               <span class="template-credit">This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
             </p>
