--- a/publications.html
+++ b/publications.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>IDEAL | Publications</title>
+  <title>IDEA LAB | Publications</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -42,7 +42,7 @@
       color: #000000 !important;
     }
 
-    .navbar-brand .brand-acronym {
+    .navbar-brand .brand-acronym, .navbar-brand .brand-lab {
       font-size: 2em;
       font-weight: 700;
       color: #0E4A84 !important;
@@ -314,7 +314,7 @@
       }
 
       /* 모바일에서 navbar 브랜드 크기 조정 */
-      .navbar-brand .brand-acronym {
+      .navbar-brand .brand-acronym, .navbar-brand .brand-lab {
         font-size: 1.5em !important;
       }
 
@@ -398,15 +398,11 @@
               <p><strong>Title:</strong> Node Assigned physics-informed neural networks for thermal-hydraulic system simulation: CVH/FL module</p>
             </div>
             <div class="under-review-entry">
-              <p><strong>[4]</strong> <strong>Authors:</strong> Y.E. Kang, D. Lee, Y. Hong, <span class="yang">S. Yang</span>, and K. Yee</p>
-              <p><strong>Title:</strong> AI-Driven Surrogate Modeling Framework for Real-Time Prediction of Airfoil Lookup Tables: Application to Proprotor Optimization</p>
-            </div>
-            <div class="under-review-entry">
-              <p><strong>[5]</strong> <strong>Authors:</strong> J. Kim, <span class="yang">S. Yang (co-corresponding author)</span>, and N. Kang</p>
+              <p><strong>[4]</strong> <strong>Authors:</strong> J. Kim, <span class="yang">S. Yang (co-corresponding author)</span>, and N. Kang</p>
               <p><strong>Title:</strong> Point-wise Diffusion Models for Physical Systems with Shape Variations: Application to Spatio-temporal and Large-scale system</p>
             </div>
             <div class="under-review-entry">
-              <p><strong>[6]</strong> <strong>Authors:</strong> S. Kim, M. Seo, <span class="yang">S. Yang (co-corresponding author)</span>, and N. Kang</p>
+              <p><strong>[5]</strong> <strong>Authors:</strong> S. Kim, M. Seo, <span class="yang">S. Yang (co-corresponding author)</span>, and N. Kang</p>
               <p><strong>Title:</strong> Decoupled Dynamics Framework with Neural Fields for 3D Spatio-temporal Prediction of Vehicle Collisions</p>
             </div>
           </div>
@@ -521,7 +517,7 @@
               <img src="images/01 캐릭터 마크 - 기본형-04.png" alt="Hanyang University ERICA logo" style="max-height: 240px;">
             </div>
             <p style="text-align: center; margin: 0;">
-              <span class="footer-line-1">&copy; IDEAL, Hanyang University ERICA.</span>
+              <span class="footer-line-1">&copy; IDEA LAB, Hanyang University ERICA.</span>
               <span class="footer-line-2">All rights reserved.</span><br>
               <span class="template-credit">This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
             </p>
