--- a/single.html
+++ b/single.html
@@ -329,7 +329,7 @@
                 <img src="images/01 캐릭터 마크 - 기본형-04.png" alt="Hanyang University ERICA logo" style="max-height: 240px;">
               </div>
               <p style="text-align: center; margin: 0;">
-                &copy; IDEAL, Hanyang University ERICA.<br>
+                &copy; IDEA LAB, Hanyang University ERICA.<br>
                 All rights reserved.<br>
                 <span class="template-credit">This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
               </p>
