--- a/team-researchers.html
+++ b/team-researchers.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>IDEAL | Researchers</title>
+<title>IDEA LAB | Researchers</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -84,7 +84,7 @@
     color: #000000 !important;
   }
 
-  .navbar-brand .brand-acronym {
+  .navbar-brand .brand-acronym, .navbar-brand .brand-lab {
     font-size: 2em;
     font-weight: 700;
     color: #0E4A84 !important;
@@ -567,7 +567,7 @@
     }
 
     /* 모바일에서 navbar 브랜드 크기 조정 */
-    .navbar-brand .brand-acronym {
+    .navbar-brand .brand-acronym, .navbar-brand .brand-lab {
       font-size: 1.5em !important;
     }
 
@@ -634,14 +634,14 @@
 				<div class="col-md-8 heading-section text-center ftco-animate">
 					<span class="subheading">Team</span>
 					<h2 class="mb-4">Researchers</h2>
-					<p>Meet the researchers driving IDEAL. We are growing and will introduce new collaborators soon.</p>
+					<p>Meet the researchers driving IDEA LAB. We are growing and will introduce new collaborators soon.</p>
 				</div>
 			</div>
 
 			<div class="row justify-content-center mb-4 ftco-animate">
 				<div class="col-lg-9">
 					<div class="recruitment-link-card">
-						<p>IDEAL 연구실은 이제 막 기반을 다지기 시작한 팀으로, 함께할 초기 멤버를 모시고 있습니다.<br>더 자세한 모집 안내는 아래 버튼을 눌러 확인해 주세요.</p>
+						<p>IDEA LAB은 이제 막 기반을 다지기 시작한 팀으로, 함께할 초기 멤버를 모시고 있습니다.<br>더 자세한 모집 안내는 아래 버튼을 눌러 확인해 주세요.</p>
 						<a class="recruitment-link-btn" href="join-us.html">신규 멤버 모집 안내 보기<span class="arrow-icon">→</span></a>
 					</div>
 				</div>
@@ -652,21 +652,21 @@
 					<div class="team-card team-card-placeholder">
 						<div class="team-role">M.S. Candidate</div>
 						<h4>Next Member</h4>
-						<p>More IDEAL researchers will be introduced soon.</p>
+						<p>More IDEA LAB researchers will be introduced soon.</p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4 mb-4 ftco-animate">
 					<div class="team-card team-card-placeholder">
 						<div class="team-role">M.S. Candidate</div>
 						<h4>Next Member</h4>
-						<p>More IDEAL researchers will be introduced soon.</p>
+						<p>More IDEA LAB researchers will be introduced soon.</p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4 mb-4 ftco-animate">
 					<div class="team-card team-card-placeholder">
 						<div class="team-role">M.S. Candidate</div>
 						<h4>Next Member</h4>
-						<p>More IDEAL researchers will be introduced soon.</p>
+						<p>More IDEA LAB researchers will be introduced soon.</p>
 					</div>
 				</div>
 			</div>
@@ -683,7 +683,7 @@
 							<img src="images/01 캐릭터 마크 - 기본형-04.png" alt="Hanyang University ERICA logo" style="max-height: 240px;">
 						</div>
 						<p style="text-align: center; margin: 0;">
-							<span class="footer-line-1">&copy; IDEAL, Hanyang University ERICA.</span>
+							<span class="footer-line-1">&copy; IDEA LAB, Hanyang University ERICA.</span>
 							<span class="footer-line-2">All rights reserved.</span><br>
 							<span class="template-credit">This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
 						</p>
