--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     color: #000000 !important;
   }
 
-  .navbar-brand .brand-acronym {
+  .navbar-brand .brand-acronym, .navbar-brand .brand-lab {
     font-size: 2em;
     font-weight: 700;
     color: #0E4A84 !important;
@@ -237,6 +237,23 @@
     color: #0E4A84 !important;
   }
 
+  .hero-title {
+    display: inline-flex;
+    align-items: baseline;
+    gap: 0.4rem;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .hero-idea {
+    color: #0E4A84;
+  }
+
+  .hero-lab-accent {
+    color: #F96D00;
+    letter-spacing: 0.15em;
+  }
+
   .hero-logo {
     width: 140px;
     height: 140px;
@@ -260,6 +277,31 @@
   .hero-wrap h2.hero-brand {
     font-size: 1.5rem !important;
     margin-top: 0 !important;
+  }
+
+  .hero-lab-text {
+    font-weight: 700;
+    color: #000000 !important;
+    text-decoration: none !important;
+    border-bottom: none !important;
+    display: inline-block;
+  }
+
+  .hero-title-break {
+    display: block;
+    height: 0.6rem;
+  }
+
+  .hero-lab-pill {
+    display: inline-block;
+    margin-left: 0.5rem;
+    padding: 0.1rem 0.65rem;
+    border-radius: 999px;
+    background: rgba(249, 109, 0, 0.15);
+    color: #F96D00;
+    font-size: 0.8em;
+    letter-spacing: 0.15em;
+    font-weight: 700;
   }
 
   .hero-wrap .letter-highlight {
@@ -530,7 +572,7 @@
     }
 
     /* 모바일에서 navbar 브랜드 크기 조정 */
-    .navbar-brand .brand-acronym {
+    .navbar-brand .brand-acronym, .navbar-brand .brand-lab {
       font-size: 1.5em !important;
     }
 
@@ -572,6 +614,24 @@
 
     .hero-wrap h2.hero-brand {
       font-size: 1rem !important;
+    }
+
+    .hero-title {
+      gap: 0.2rem;
+    }
+
+    .hero-lab-text {
+      font-size: 1.05em;
+      text-decoration: none !important;
+    }
+
+    .hero-title-break {
+      height: 0.4rem;
+    }
+
+    .hero-lab-pill {
+      margin-left: 0.35rem;
+      font-size: 0.85em;
     }
 
     .hero-logo {
@@ -634,9 +694,10 @@
 				<div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
 					<div class="text text-center">
 						<img src="images/HYU_logo_singlecolor_png.png" alt="Hanyang University" class="hero-logo img-fluid">
+						<span class="hero-title-break"></span>
 <!--						<span class="subheading">Hello! Here is</span>-->
-						<h1>IDEAL</h1>
-						<h2 class="hero-brand"><span class="letter-highlight">I</span>ntelligent <span class="letter-highlight">D</span>esign for <span class="letter-highlight">E</span>ngineering <span class="letter-highlight">A</span>pplications <span class="letter-highlight">L</span>aboratory</h2>
+<!--						<h1 class="hero-title"><span class="hero-idea">IDEA LAB</span></h1>-->
+						<h2 class="hero-brand"><span class="letter-highlight">I</span>ntelligent <span class="letter-highlight">D</span>esign for <span class="letter-highlight">E</span>ngineering <span class="letter-highlight">A</span>pplications <span class="hero-lab-text">LAB</span></h2>
 						<!-- Original txt-rotate effect (commented out)
 						<h2> We are at the intersection of
 							<span class="txt-rotate" data-period="2000" data-speed="120" data-rotate='[ "Engineering Design &amp; AI"]'></span>
@@ -681,7 +742,7 @@
 
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="text">
-								<span class="date">IDEAL Roadmap</span>
+								<span class="date">IDEA LAB Roadmap</span>
 								<h2>Human-Centered Intelligent Design</h2>
 								<p>We are building a studio where AI copilots amplify engineering creativity rather than replace it. Our team vision is to connect researchers, students, and industry partners through an open design culture that values transparency and reproducibility.</p>
 								<ul>
@@ -696,7 +757,7 @@
 							<div class="text">
 								<span class="date">Community Impact</span>
 								<h2>Trustworthy Engineering Intelligence</h2>
-								<p>IDEAL is committed to delivering reliable decision support tools for domains where safety and performance matter. We emphasize measurable gains—faster simulations, better prototypes, and explainable recommendations.</p>
+								<p>IDEA LAB is committed to delivering reliable decision support tools for domains where safety and performance matter. We emphasize measurable gains—faster simulations, better prototypes, and explainable recommendations.</p>
 								<ul>
 									<li>Partner with academic labs and startups on high-impact demonstrators.</li>
 									<li>Publish open datasets and tutorials to encourage reproducible research.</li>
@@ -740,15 +801,15 @@
 			<img src="images/image_3.jpg" alt="Award ceremony">
 			<div>
 				<span class="date">Nov. 12, 2025</span>
-				<h4>Received the HYU IDEAL Lab Impact Award</h4>
-				<p>Honored to be recognized for leading our data-driven design initiatives and mentoring the next wave of IDEAL researchers.</p>
+				<h4>Received the HYU IDEA LAB Impact Award</h4>
+				<p>Honored to be recognized for leading our data-driven design initiatives and mentoring the next wave of IDEA LAB researchers.</p>
 			</div>
 		</div>
 		<div class="news-item ftco-animate">
-			<img src="images/about-1.jpg" alt="IDEAL sprint">
+			<img src="images/about-1.jpg" alt="IDEA LAB sprint">
 			<div>
 				<span class="date">Oct. 10, 2025</span>
-				<h4>IDEAL kicks off the co-design studio sprint</h4>
+				<h4>IDEA LAB kicks off the co-design studio sprint</h4>
 				<p>Launched a two-week sprint where mixed teams pair LLM copilots with rapid CFD studies to prototype rotor ideas.</p>
 			</div>
 		</div>
@@ -764,7 +825,7 @@
 			<img src="images/image_2.png" alt="Seminar">
 			<div>
 				<span class="date">Sep. 5, 2025</span>
-				<h4>First IDEAL seminar on physics-guided AI</h4>
+				<h4>First IDEA LAB seminar on physics-guided AI</h4>
 				<p>Shared our surrogate modeling pipeline with campus visitors and received energizing feedback on deployment tooling.</p>
 			</div>
 		</div>
@@ -789,7 +850,7 @@
 							<img src="images/01 캐릭터 마크 - 기본형-04.png" alt="Hanyang University ERICA logo" style="max-height: 240px;">
 						</div>
 						<p style="text-align: center; margin: 0;">
-							<span class="footer-line-1">&copy; IDEAL, Hanyang University ERICA.</span>
+							<span class="footer-line-1">&copy; IDEA LAB, Hanyang University ERICA.</span>
 							<span class="footer-line-2">All rights reserved.</span><br>
 							<span class="template-credit">This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
 						</p>
