--- a/projects.html
+++ b/projects.html
@@ -129,21 +129,6 @@
     padding: 1.5rem 1.75rem;
   }
 
-  .project-role {
-    font-size: 0.85rem;
-    font-weight: 700;
-    letter-spacing: 0.08em;
-    text-transform: uppercase;
-    color: #0E4A84;
-    margin-bottom: 0.35rem;
-    display: inline-block;
-  }
-
-  .project-item h4 {
-    font-size: 1.15rem;
-    margin-bottom: 0.4rem;
-  }
-
   .project-meta {
     margin-bottom: 0.3rem;
   }
@@ -265,15 +250,15 @@
 
 			<div class="projects-wrapper">
 				<div class="project-item ftco-animate">
-					<span class="project-role">Role: PI</span>
-					<h4>Development of AI-based Flow Prediction Framework Considering Versatility and User-Friendliness in Digital Twins</h4>
+					<p class="project-meta"><strong>Role:</strong> Principal Investigator</p>
 					<p class="project-meta"><strong>Sponsor:</strong> National Research Foundation of Korea (Sejong Fellowship)</p>
+					<p class="project-meta"><strong>Title:</strong> Development of AI-based Flow Prediction Framework Considering Versatility and User-Friendliness in Digital Twins</p>
 					<p class="project-meta"><strong>Period & Funding:</strong> 2024.05.01 ~ 2029.04.30 (5 years, 500,000,000 KRW)</p>
 				</div>
 				<div class="project-item ftco-animate">
-					<span class="project-role">Role: PI</span>
-					<h4>Development of AI algorithms for preform design for blow molding</h4>
+					<p class="project-meta"><strong>Role:</strong> Principal Investigator</p>
 					<p class="project-meta"><strong>Sponsor:</strong> Korea Institute of Industrial Technology (KITECH)</p>
+					<p class="project-meta"><strong>Title:</strong> Development of AI algorithms for preform design for blow molding</p>
 					<p class="project-meta"><strong>Period & Funding:</strong> 2024.05.08 ~ 2024.08.31 (4 months, 20,000,000 KRW)</p>
 				</div>
 			</div>
