--- a/team-advisor.html
+++ b/team-advisor.html
@@ -519,7 +519,7 @@
     font-size: 0.72rem;
     letter-spacing: 0.05em;
     text-transform: uppercase;
-    padding: 0.25rem 0.8rem;
+    padding: 0.18rem 0.8rem;
     border-radius: 999px;
     border: 1px solid rgba(14, 74, 132, 0.2);
   }
@@ -751,6 +751,7 @@
 							<h3 class="advisor-section-title">Experience</h3>
 							<div class="resume-wrap d-flex ftco-animate">
 								<div class="text">
+									<div class="award-tag-wrapper"><span class="award-tag">Current</span></div>
 									<span class="date">Mar. 2026 - Present</span>
 									<h2>Assistant Professor, Hanyang University</h2>
 									<span class="position">Mechanical Engineering</span>
@@ -758,6 +759,7 @@
 							</div>
 							<div class="resume-wrap d-flex ftco-animate">
 								<div class="text">
+									<div class="award-tag-wrapper"><span class="award-tag">Current</span></div>
 									<span class="date">Mar. 2026 - Present</span>
 									<h2>Visiting Professor, Seoul Digital University</h2>
 									<span class="position">Applied AI Practice Major</span>
