--- a/join-us.html
+++ b/join-us.html
@@ -102,6 +102,15 @@
       font-size: 0.95rem !important;
       line-height: 1.7 !important;
       color: #555 !important;
+      text-align: justify;
+      text-justify: inter-word;
+      text-align-last: left;
+    }
+
+    #join-section p {
+      text-align: justify;
+      text-justify: inter-word;
+      text-align-last: left;
     }
 
     .contact-card {
@@ -119,6 +128,9 @@
       margin-bottom: 0;
       color: #333;
       font-weight: 500;
+      text-align: center;
+      text-justify: initial;
+      text-align-last: center;
     }
 
     .contact-card a {
@@ -174,6 +186,14 @@
 
     .recruitment-card p {
       text-indent: 1rem;
+      text-align: justify;
+      text-justify: inter-word;
+      text-align-last: left;
+    }
+
+    .recruitment-card li {
+      text-align: justify;
+      text-align-last: left;
     }
 
     .recruitment-card .emphasis-note {
@@ -279,7 +299,7 @@
 
             <div class="faq-item">
               <div class="faq-question">AI 분야 말고 다른 전공에도 관심이 있는데 어떻게 해야 할까요?</div>
-              <p><strong>우리 연구실은 AI 자체만을 독립적으로 연구하지 않고</strong> 기계·항공 분야 전반에서 AI가 필요한 문제를 발굴하고 이를 위한 솔루션을 기획합니다. 학생분들이 평소에 관심 갖고 계신 분야 (예를 들어 로봇 동역학, 자동차 충돌 해석, EV 배터리/모터, 반도체 설계 등)에 대한 학습을 적극 지원하며, <strong>각 분야 국내 전문가와의 공동연구를 직접 매칭</strong>해 드림으로써 해당 산업에 특화된 AI 전문가로 성장할 수 있도록 합니다.</p>
+			<p>우리 연구실은 AI 기술 자체에 집중하기보다는, <strong>기계·항공 산업 현장에서 실제로 제기되는 요구를 토대로 문제를 정의하고 그에 맞는 AI 접근법을 설계</strong>합니다. 기업과 연구기관으로부터 현장 과제를 공급받아 해당 도메인에 즉시 투입 가능한 솔루션을 만들며, 학생분들이 관심 있는 영역(로봇 동역학, 자동차 충돌 해석, EV 배터리·모터, 반도체 설계 등)에 대한 학습을 적극 지원합니다. 또한 <strong>각 분야 국내 전문가와의 공동연구를 직접 매칭</strong>해 드려, 산업 현장이 원하는 역량을 갖춘 AI 인재로 성장할 수 있도록 돕습니다.</p>
             </div>
 
             <div class="faq-item">
