--- a/join-us.html
+++ b/join-us.html
@@ -299,7 +299,7 @@
 
             <div class="faq-item">
               <div class="faq-question">AI 분야 말고 다른 전공에도 관심이 있는데 어떻게 해야 할까요?</div>
-			<p>우리 연구실은 AI 기술 자체에 집중하기보다는, <strong>기계·항공 산업 현장에서 실제로 제기되는 요구를 토대로 문제를 정의하고 그에 맞는 AI 접근법을 설계</strong>합니다. 기업과 연구기관으로부터 현장 과제를 공급받아 해당 도메인에 즉시 투입 가능한 솔루션을 만들며, 학생분들이 관심 있는 영역(로봇 동역학, 자동차 충돌 해석, EV 배터리·모터, 반도체 설계 등)에 대한 학습을 적극 지원합니다. 또한 <strong>각 분야 국내 전문가와의 공동연구를 직접 매칭</strong>해 드려, 산업 현장이 원하는 역량을 갖춘 AI 인재로 성장할 수 있도록 돕습니다.</p>
+			<p>우리 연구실은 AI 기술 자체에 집중하기보다는, <strong>기계·항공 산업 현장에서 실제로 제기되는 요구를 토대로 문제를 정의하고 그에 맞는 AI 접근법을 설계</strong>합니다. 기업과 연구기관으로부터 현장 과제를 공급받아 도메인 특화 AI 솔루션을 만들고, 이 과정에서 학생분들이 관심 있는 영역(로봇 동역학, 자동차 충돌 해석, EV 배터리·모터, 반도체 설계 등)을 깊이 있게 다룰 수 있도록 학습을 지원합니다. 또한 <strong>각 분야 국내 전문가와의 공동연구를 직접 매칭</strong>해 드려, 산업 현장이 원하는 역량을 갖춘 AI 인재로 성장할 수 있도록 돕습니다.</p>
             </div>
 
             <div class="faq-item">
