--- a/research.html
+++ b/research.html
@@ -20,19 +20,20 @@
   <link rel="stylesheet" href="css/style.css">
 
   <style>
-    body {
+    body.research-body {
       font-family: "DM Sans", sans-serif;
       font-optical-sizing: auto;
       font-size: 15px;
       line-height: 1.7;
       color: #e5e7eb;
-      background: radial-gradient(circle at top, rgba(14, 74, 132, 0.5), rgba(6, 14, 24, 0.95) 45%), #05070c;
+      background: url('images/space_NASA.png') center/cover fixed no-repeat, #05070c;
       min-height: 100vh;
       position: relative;
       overflow-x: hidden;
     }
 
-    body::before {
+    body.research-body::before,
+    body.research-body::after {
       content: '';
       position: fixed;
       top: 0;
@@ -42,47 +43,11 @@
       pointer-events: none;
       background-image:
         radial-gradient(1px 1px at 20% 30%, rgba(255, 255, 255, 0.6), transparent),
-        radial-gradient(1.5px 1.5px at 80% 20%, rgba(255, 255, 255, 0.45), transparent),
-        radial-gradient(1px 1px at 60% 70%, rgba(156, 203, 255, 0.55), transparent),
-        radial-gradient(1px 1px at 10% 80%, rgba(255, 255, 255, 0.4), transparent),
-        radial-gradient(1px 1px at 90% 60%, rgba(255, 255, 255, 0.55), transparent);
-      background-size: 500px 500px, 600px 600px, 550px 550px, 450px 450px, 700px 700px;
-      opacity: 0.7;
-      z-index: -1;
-      animation: twinkle 12s ease-in-out infinite;
-    }
-
-    body::after {
-      content: '';
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      background-image:
-        radial-gradient(2px 2px at 30% 40%, rgba(255, 255, 255, 0.35), transparent),
-        radial-gradient(2px 2px at 70% 30%, rgba(255, 255, 255, 0.25), transparent),
-        radial-gradient(2px 2px at 50% 80%, rgba(197, 219, 255, 0.3), transparent);
-      background-size: 650px 650px, 720px 720px, 600px 600px;
+        radial-gradient(1.5px 1.5px at 80% 20%, rgba(255, 255, 255, 0.35), transparent),
+        radial-gradient(1px 1px at 60% 70%, rgba(156, 203, 255, 0.4), transparent);
+      background-size: 500px 500px, 550px 550px, 600px 600px;
       opacity: 0.5;
       z-index: -1;
-      animation: twinkle 18s linear infinite reverse;
-    }
-
-    @keyframes twinkle {
-      0% {
-        opacity: 0.6;
-        transform: translate3d(0, 0, 0) scale(1);
-      }
-      50% {
-        opacity: 0.85;
-        transform: translate3d(1%, -1%, 0) scale(1.02);
-      }
-      100% {
-        opacity: 0.6;
-        transform: translate3d(0, 0, 0) scale(1);
-      }
     }
 
     .navbar-brand {
@@ -167,12 +132,18 @@
     .research-hero h2 {
       font-size: 2rem;
       font-weight: 700;
-      color: #f3f4f6;
+      color: #ffffff;
+    }
+
+    .research-hero p,
+    .research-hero .subheading,
+    .specialization p,
+    .specialization strong {
+      color: #ffffff;
     }
 
     .research-hero p {
       font-size: 1rem;
-      color: #d1d5db;
       max-width: 760px;
       margin: 0.75rem auto 0;
     }
@@ -203,8 +174,9 @@
       text-align: center;
       font-size: 1.5rem;
       font-weight: 700;
-      color: #60a5fa;
+      color: #ffffff !important;
       margin-bottom: 1.5rem;
+      text-shadow: 0 4px 20px rgba(0, 0, 0, 0.65);
     }
 
     .component-grid {
@@ -306,13 +278,13 @@
   </style>
 </head>
 
-<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+<body class="research-body" data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
   <div data-navbar data-active="research"></div>
 
   <section class="ftco-section" id="research-section">
     <div class="container">
       <div class="research-hero ftco-animate">
-        <p class="subheading text-uppercase" style="letter-spacing:0.2em; color:#888;">Research Topic</p>
+        <p class="subheading text-uppercase" style="letter-spacing:0.2em; color:#fff;">Research Topic</p>
         <h2>Physics-Guided AI for Aerodynamic Simulation &amp; Design</h2>
         <p>We combine physics priors with trustworthy AI workflows to accelerate flow simulations, deliver reliable spatio-temporal forecasts, and guide data-driven design recommendations.</p>
       </div>
@@ -322,7 +294,7 @@
       </div>
 
       <div class="key-components">
-        <h3>Key Components of Physics-Guided AI</h3>
+        <h3 class="text-white">Key Components of Physics-Guided AI</h3>
         <div class="component-grid">
           <div class="component-card ftco-animate">
             <span class="component-number">1</span>
