--- a/research.html
+++ b/research.html
@@ -153,7 +153,7 @@
       box-shadow: 0 35px 75px rgba(0, 0, 0, 0.5);
       overflow: hidden;
       margin-bottom: 2rem;
-      background: #fff;
+      background: #fcfaf4;
       padding: 1.25rem;
     }
 
