--- a/join-us.html
+++ b/join-us.html
@@ -272,13 +272,13 @@
         <div class="col-md-9 heading-section text-center ftco-animate">
           <span class="subheading">Join Us</span>
           <h2 class="mb-4">IDEA LAB 초기 멤버 모집</h2>
-          <p>AI 기술로 공학 설계의 패러다임을 바꿀 젊고 역동적인 연구실 IDEA LAB이 첫 발을 내디뎠습니다.<br>지능형 설계의 새로운 기준을 세우며, 연구실의 문화를 함께 정립해 나갈 주도적이고 열의 넘치는 동료를 찾습니다.</p>
+          <p style="text-align:center; text-align-last:center;">AI 기술로 공학 설계의 패러다임을 바꿀 젊고 역동적인 연구실 IDEA LAB이 첫 발을 내디뎠습니다.<br>지능형 설계의 새로운 기준을 세우며, 연구실의 문화를 함께 정립해 나갈 주도적이고 열의 넘치는 동료를 찾습니다.</p>
         </div>
       </div>
       <div class="row justify-content-center">
         <div class="col-lg-10 ftco-animate">
           <div class="contact-card">
-            <p>모집 관련 문의나 상담을 원하시면 언제든 <a href="mailto:sunwoongy@hanyang.ac.kr">sunwoongy@hanyang.ac.kr</a> 로 연락 주세요.</br>관심 분야와 간단한 소개를 보내주시면 48시간 이내에 답변드리겠습니다.</p>
+            <p style="text-align:center; text-align-last:center;">모집 관련 문의나 상담을 원하시면 언제든 <a href="mailto:sunwoongy@hanyang.ac.kr">sunwoongy@hanyang.ac.kr</a> 로 연락 주세요.</br>관심 분야와 간단한 소개를 보내주시면 48시간 이내에 답변드리겠습니다.</p>
           </div>
         </div>
       </div>
