--- a/research.html
+++ b/research.html
@@ -242,6 +242,7 @@
       flex-direction: column;
       gap: 1rem;
       margin-top: 2rem;
+      align-items: center;
     }
 
     .workflow-card {
@@ -250,7 +251,8 @@
       padding: 1rem;
       border: 1px solid rgba(96, 165, 250, 0.35);
       box-shadow: 0 18px 45px rgba(2, 6, 23, 0.6);
-      text-align: left;
+      text-align: center;
+      width: 80%;
     }
 
     .workflow-card h5 {
