--- a/index.html
+++ b/index.html
@@ -262,9 +262,17 @@
   }
 
   /* 히어로 섹션 오버레이 흰색으로 변경 */
+  .hero-wrap {
+    background-image: url('images/space_NASA2.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+  }
+
   .hero-wrap .overlay {
-    background: #ffffff !important;
+    background: rgba(255, 255, 255, 0.6) !important;
     opacity: 1 !important;
+    width: 100% !important;
   }
 
   .hero-wrap h2 {
