--- a/join-us.html
+++ b/join-us.html
@@ -307,7 +307,7 @@
               <ul>
                 <li><strong>학부연구생</strong> (3학년 이상 지원 가능)</li>
                 <li><strong>학·석사 연계과정</strong></li>
-                <li><strong>석사과정</strong> (최소 2개월 학부연구생 경험 권장: 서로의 스타일을 파악해 석사 과정에서 더 빠르게 성장하기 위함)</li>
+                <li><strong>석사과정/석박통합과정</strong> (최소 2개월 학부연구생 경험 권장: 서로의 스타일을 파악해 석사 과정에서 더 빠르게 성장하기 위함)</li>
                 <li><strong>박사과정</strong> (석사과정 전공분야를 AI 설계 대상으로 활용하여 빠르게 본인만의 연구를 기획하고자 하는 분 환영)</li>
               </ul>
             </div>
