--- a/research.html
+++ b/research.html
@@ -288,7 +288,7 @@
       <div class="research-hero ftco-animate">
         <p class="subheading text-uppercase" style="letter-spacing:0.2em; color:#fff;">Research Topic</p>
         <h2>Physics-Guided AI for Aerodynamic Simulation &amp; Design</h2>
-        <p>We combine physics priors with trustworthy AI workflows to accelerate flow simulations, deliver reliable spatio-temporal forecasts, and guide data-driven design recommendations.</p>
+        <p><strong>We combine physics priors with trustworthy AI workflows to accelerate flow simulations, deliver reliable spatio-temporal forecasts, and guide data-driven design recommendations.</strong></p>
       </div>
 
       <div class="research-visual ftco-animate">
@@ -323,7 +323,7 @@
 
       <div class="specialization">
         <h3>Specialization for Aerodynamic Simulation &amp; Design</h3>
-        <p>Our end-to-end framework integrates the four components above across the entire aerodynamic workflow—from data collection and AI modeling to real-time prediction and design recommendation.</p>
+        <p><strong>Our end-to-end framework integrates the four components above across the entire aerodynamic workflow—from data collection and AI modeling to real-time prediction and design recommendation.</strong></p>
         <div class="workflow-grid">
           <div class="workflow-card ftco-animate">
             <h5>1. Flow Simulations</h5>
