--- a/join-us.html
+++ b/join-us.html
@@ -314,7 +314,7 @@
 
             <div class="faq-item">
               <div class="faq-question">입학 후 구체적인 연구 분야는 어떻게 정해지나요?</div>
-              <p><strong>우리 연구실은 지원자가 원하는 연구 분야에 최대한 맞춰 매칭하는 것을 원칙</strong>으로 합니다. 초기 상담을 통해 관심 영역과 커리어 목표를 충분히 공유한 뒤, 지도교수가 프로젝트와 협업 파트너를 직접 매칭합니다. 진행 중 상황에 따라 세부 주제가 조정될 수는 있지만, 사전에 충분히 협의하고 합의된 방향으로 연구를 이어가니 안심하셔도 됩니다.</p>
+              <p><strong>우리 연구실은 지원자가 원하는 연구 분야에 최대한 맞춰 매칭하는 것을 원칙</strong>으로 합니다. 초기 상담을 통해 관심 영역과 커리어 목표를 충분히 공유한 뒤, 지도교수가 프로젝트와 협업 파트너를 직접 매칭합니다. 진행 중 상황에 따라 세부 주제가 조정될 수는 있지만, 사전에 충분히 협의하고 합의된 방향으로 연구를 이어가게 됩니다.</p>
             </div>
 
             <div class="faq-item">
