--- a/research.html
+++ b/research.html
@@ -135,11 +135,14 @@
       color: #ffffff;
     }
 
+    .research-hero .subheading {
+      color: #ffffff;
+    }
+
     .research-hero p,
-    .research-hero .subheading,
     .specialization p,
     .specialization strong {
-      color: #ffffff;
+      color: #f6f0e0;
     }
 
     .research-hero p {
@@ -230,11 +233,11 @@
 
     .specialization p {
       font-size: 1rem;
-      color: #d1d5db;
+      color: #f6f0e0;
     }
 
     .specialization strong {
-      color: #93c5fd;
+      color: #f6f0e0;
     }
 
     .workflow-grid {
