--- a/research.html
+++ b/research.html
@@ -272,6 +272,50 @@
     }
 
     @media (max-width: 768px) {
+      /* Match navbar appearance with other pages (e.g., publications) */
+      #ftco-navbar .navbar-nav .nav-link {
+        color: #000000 !important;
+        font-size: 0.9rem !important;
+        font-weight: 700 !important;
+      }
+
+      .navbar-toggler {
+        border-color: #000000 !important;
+        color: #000000 !important;
+      }
+
+      .navbar-toggler .oi,
+      .navbar-toggler span,
+      .navbar-toggler .menu-text {
+        color: #000000 !important;
+      }
+
+      .navbar-brand .brand-acronym,
+      .navbar-brand .brand-lab {
+        font-size: 1.5em !important;
+      }
+
+      .navbar-brand .brand-text {
+        font-size: 0.9rem !important;
+      }
+
+      .university-text {
+        display: none !important;
+      }
+
+      .navbar-collapse {
+        background-color: rgba(243, 246, 251, 0.85) !important;
+        margin-top: 1rem;
+        padding: 1rem;
+        border-radius: 0.5rem;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      }
+
+      #ftco-navbar {
+        padding-top: 1rem !important;
+        padding-bottom: 1rem !important;
+      }
+
       .research-hero h2 {
         font-size: 1.7rem;
       }
