--- a/news.html
+++ b/news.html
@@ -105,10 +105,11 @@
       display: flex;
       gap: 1rem;
       align-items: center;
-      padding: 1rem 1.25rem;
-      border-radius: 12px;
-      border: 1px solid rgba(0, 0, 0, 0.05);
+      padding: 1.35rem 1.75rem;
+      border-radius: 18px;
+      border: 1px solid rgba(14, 74, 132, 0.12);
       background: #fff;
+      box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
       margin-bottom: 1rem;
     }
 
